# qwencalc

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PLAN.md  README.md  REQUIREMENTS.md  build.sh  test_debug  test_debug.cpp
backend/: CalculatorEngine.cpp  CalculatorEngine.h  ExpressionParser.cpp  ExpressionParser.h  HistoryManager.cpp  HistoryManager.h
docs/: API.md
frontend/: CalculatorWindow.cpp  CalculatorWindow.h  DisplayWidget.cpp  DisplayWidget.h  KeypadWidget.cpp  KeypadWidget.h  ThemeManager.cpp  ThemeManager.h
src/: main.cpp
tests/: CMakeLists.txt  test_CalculatorEngine.cpp  test_ExpressionParser.cpp  test_HistoryManager.cpp  test_frontend.cpp  test_integration  test_integration.cpp
